[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/meteors/m3.png" type="Texture" id=1]
[ext_resource path="res://assets/meteors/m2.png" type="Texture" id=2]
[ext_resource path="res://assets/planets/pl2.png" type="Texture" id=3]
[ext_resource path="res://assets/planets/pl1.png" type="Texture" id=4]
[ext_resource path="res://assets/meteors/m1.png" type="Texture" id=5]
[ext_resource path="res://assets/stars/star_small.png" type="Texture" id=6]
[ext_resource path="res://assets/background/Space_BG_01/Layers/BG.png" type="Texture" id=7]
[ext_resource path="res://mainmenu/MainMenuTheme.tres" type="Theme" id=8]
[ext_resource path="res://mainmenu/MainMenu.gd" type="Script" id=10]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 960, 540 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 536.0
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 540.0
margin_right = 1920.0
margin_bottom = 1076.0
size_flags_vertical = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
margin_right = 1920.0
margin_bottom = 536.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_right = 477.0
margin_bottom = 536.0
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_left = 481.0
margin_right = 958.0
margin_bottom = 536.0
size_flags_horizontal = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_left = 962.0
margin_right = 1439.0
margin_bottom = 536.0
size_flags_horizontal = 3
custom_constants/separation = 24

[node name="NewGame" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer4/VBoxContainer3"]
margin_right = 477.0
margin_bottom = 42.0
theme = ExtResource( 8 )
text = "New Game"

[node name="How To Play" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer4/VBoxContainer3"]
margin_top = 66.0
margin_right = 477.0
margin_bottom = 108.0
theme = ExtResource( 8 )
text = "How To Play"

[node name="Credits" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer4/VBoxContainer3"]
margin_top = 132.0
margin_right = 477.0
margin_bottom = 174.0
theme = ExtResource( 8 )
text = "Credits"

[node name="Beenden" type="Button" parent="VBoxContainer/VBoxContainer2/HBoxContainer4/VBoxContainer3"]
margin_top = 198.0
margin_right = 477.0
margin_bottom = 240.0
theme = ExtResource( 8 )
text = "Quit"

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/HBoxContainer4"]
margin_left = 1443.0
margin_right = 1920.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 1080.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 960, 540 )
transform = Transform2D( 1, 0, 0, 1, 960, 540 )

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )

[node name="Bg" type="Sprite" parent="ParallaxBackground/Background"]
rotation = 1.5708
texture = ExtResource( 7 )

[node name="SunSprite" type="Sprite" parent="ParallaxBackground/Background"]
scale = Vector2( 0.4, 0.4 )

[node name="supermassiveblackhole" type="Node2D" parent="ParallaxBackground/Background"]

[node name="Stars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.01, 0.01 )

[node name="StarSmall" type="Sprite" parent="ParallaxBackground/Stars"]
position = Vector2( -690, 11 )
texture = ExtResource( 6 )

[node name="StarSmall2" type="Sprite" parent="ParallaxBackground/Stars"]
position = Vector2( 80, -379 )
texture = ExtResource( 6 )

[node name="StarSmall3" type="Sprite" parent="ParallaxBackground/Stars"]
position = Vector2( 519, 246 )
texture = ExtResource( 6 )

[node name="Planets" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.02, 0.02 )

[node name="Pl2" type="Sprite" parent="ParallaxBackground/Planets"]
position = Vector2( -187, 138 )
texture = ExtResource( 3 )

[node name="Pl1" type="Sprite" parent="ParallaxBackground/Planets"]
position = Vector2( -317, 241 )
texture = ExtResource( 4 )

[node name="Meteors" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.03, 0.03 )

[node name="M1" type="Sprite" parent="ParallaxBackground/Meteors"]
position = Vector2( -635, -371 )
texture = ExtResource( 5 )

[node name="M2" type="Sprite" parent="ParallaxBackground/Meteors"]
position = Vector2( 492, -332 )
texture = ExtResource( 2 )

[node name="M3" type="Sprite" parent="ParallaxBackground/Meteors"]
position = Vector2( 238, -46 )
texture = ExtResource( 1 )

[node name="Transition" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )

[node name="Transition" type="ColorRect" parent="ParallaxBackground/Transition"]
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
color = Color( 1, 1, 1, 0 )

[connection signal="pressed" from="VBoxContainer/VBoxContainer2/HBoxContainer4/VBoxContainer3/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/HBoxContainer4/VBoxContainer3/How To Play" to="." method="_on_How_To_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/HBoxContainer4/VBoxContainer3/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/HBoxContainer4/VBoxContainer3/Beenden" to="." method="_on_Beenden_pressed"]
